added dependencies bablify middleware updated gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+### Custom
+public/stylesheets/**.css
+public/stylesheets/**.css.map
+
 # Created by .ignore support plugin (hsz.mobi)
 ### Node template
 # Logs
