--- a/package.json
+++ b/package.json
@@ -6,12 +6,21 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@babel/core": "^7.0.0-beta.56",
+    "@babel/preset-env": "^7.0.0-beta.56",
+    "babelify": "^9.0.0",
+    "browserify-middleware": "^8.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
+    "express-ejs-layouts": "^2.4.0",
+    "express-plugable-routes": "^1.0.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.11.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.3"
   }
 }
