--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "express": "~4.16.0",
     "express-ejs-layouts": "^2.4.0",
     "express-plugable-routes": "^1.0.0",
+    "foundation-sites": "^6.5.0-rc.2",
     "http-errors": "~1.6.2",
+    "i18n": "^0.8.3",
+    "jquery": "^3.3.1",
+    "lokijs": "^1.5.5",
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.11.0"
   },
