--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "jquery": "^3.3.1",
     "lokijs": "^1.5.5",
     "morgan": "~1.9.0",
-    "node-sass-middleware": "0.11.0"
+    "node-sass-middleware": "0.11.0",
+    "node-vibrant": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.3"
