--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
   "name": "cert-manager",
-  "version": "0.0.0",
-  "private": true,
+  "version": "0.0.1",
+  "private": false,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
     "@babel/core": "^7.0.0-beta.56",
     "@babel/preset-env": "^7.0.0-beta.56",
+    "@fortawesome/fontawesome-free": "^5.2.0",
     "babelify": "^9.0.0",
     "browserify-middleware": "^8.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
+    "express-async-await": "^1.1.0",
     "express-ejs-layouts": "^2.4.0",
-    "express-plugable-routes": "^1.0.0",
+    "express-plugable-routes": "^2.0.0",
     "foundation-sites": "^6.5.0-rc.2",
     "http-errors": "~1.6.2",
     "i18n": "^0.8.3",
